[package]
name = "lnmarkets_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["json"]}
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tokio-js-set-interval = "1.3.0"
toml = "0.8.1"
